# neural-engine

./: .gitignore  Cargo.toml  README.md
docs/: attention.md
src/: main.rs
src/math/: attention.rs  mod.rs  tensor.rs  weights.rs
