[package]
name = "neural_engine"
version = "0.1.0"
edition = "2021"
description = "Pure mathematical inference and attention core"
default-run = "neural_engine"

[dependencies]
# Kendi yazdığımız protokol kütüphanesi (Yerel yoldan bağlıyoruz)
open_cognitive_protocol = { path = "../protocol" }

# Güvenli bellek eşleme (Memory Mapped Files) için
memmap2 = "0.9.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
